# litellm-metrics

./: .env.example  .gitattributes  .gitignore  .venv  AGENTS.md  INSTALL.md  README.md  pyproject.toml
src/litellm_metrics/: __init__.py  cli.py  config.py  dashboard.py  metrics_parser.py
tests/: conftest.py
tests/e2e/: test_cli.py
tests/integration/: test_collector.py  test_dashboard.py
tests/test_data/: full_litellm_metrics.txt  malformed_metrics.txt
tests/unit/: test_config.py  test_parser.py  test_utils.py
