[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "litellm-metrics"
version = "0.1.0"
description = "Real-time console monitoring dashboard for LiteLLM proxy servers"
readme = "README.md"
authors = [
    {name = "utrobinmv"},
]
requires-python = ">=3.11"
dependencies = [
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-httpserver>=1.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
litellm-metrics = "litellm_metrics.cli:cli"

[project.urls]
Homepage = "https://github.com/krapotkin/litellm-metrics"
Repository = "https://github.com/krapotkin/litellm-metrics"
Issues = "https://github.com/krapotkin/litellm-metrics/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
